# MK-TFHE-V

./: .gitignore  CMakeLists.txt  fff  lagrangehalfc_arithmetic.h  mkTFHEfunctions.h  testMKbootNAND_FFT_v2.cpp
